Fallback to using block-post template for flashcards on smallest screens. This fixed weird iframe issue with scrolling content on iOS.

--- a/wp-content/themes/ednc-2016/assets/styles/layouts/_flash-cards.scss
+++ b/wp-content/themes/ednc-2016/assets/styles/layouts/_flash-cards.scss
@@ -50,8 +50,8 @@
 }
 
 // Flash card listings in category archives
-.category {
-  .flash-cards {
+.block-post {
+  &.flash-cards {
     @include index-card-background;
     border: 1px solid $steel;
     padding: 1em;
@@ -73,8 +73,10 @@
     z-index: 50;
   }
 
-  .entry-header {
-    margin-top: 3em;
+  div:not(.wp-embed-xs) {
+    .entry-header {
+      margin-top: 3em;
+    }
   }
 
   .entry-title {
